# cmd-guessgame

./: .gitignore  CMakeLists.txt  README.md  generate.bat  generate_without_make.bat  todo.txt
check/: CMakelists.txt  check_integer.cpp  check_integer.h
game/: CMakelists.txt  game_func.cpp  game_show.cpp
include/: check_integer.h  game.h  std_crate.h
src/: CmakeLists.txt  function.cpp  game_func.cpp  game_show.cpp  main.cpp  show.cpp
